--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,16 +12,20 @@ body {
   font-family: "Open Sans", sans-serif;
   background-color: var(--main-white-color);
   font-size: 14px;
+  /* font-weight: 400; */
+
   color: var(--main-font-color);
 }
 
 h1 {
+  margin: 0 0 20px;
+  
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 72px;
   letter-spacing: 0.05em;
+
   color: var(--main-white-color);
-  background-color: var(--secondary-light-font-color);
 }
 
 .list {
@@ -32,3 +36,69 @@ h1 {
   text-decoration: none;
   color: inherit;
 }
+
+.container {
+  width: 1230px;
+  margin: 0 auto;
+  padding: 0 15px;
+  background-color: var(--secondary-light-font-color);
+}
+
+.button {
+  padding: 12px 20px;
+  min-width: 160px;
+
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  text-align: center;
+
+  color: var(--main-white-color);
+  border: 1px solid var(--accent-color);
+  border-radius: 25px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.button:hover,
+button:focus {
+  background-color: var(--accent-color);
+}
+
+/* hader */
+.header-link {
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 0.1em;
+  color: var(--main-white-color);
+}
+
+.header-link:hover,
+.header-link:focus {
+  color: var(--accent-color);
+}
+
+.header-link.contact {
+  text-transform: uppercase;
+}
+
+/* hero screen */
+
+.top-title {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+
+}
+
+font-weight: 600;
+font-size: 11px;
+letter-spacing: 0.1em;
+text-transform: uppercase;
+color: rgba(157, 164, 189, 0.6);
+
+/* .social-list {
+  display: flexbox;
+  flex-direction: column-reverse;}
+
