--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,14 +12,34 @@ body {
   font-family: "Open Sans", sans-serif;
   background-color: var(--main-white-color);
   font-size: 14px;
-  /* font-weight: 400; */
-
+  font-weight: 400;
   color: var(--main-font-color);
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
 }
 
 h1 {
   margin: 0 0 20px;
-  
+
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 72px;
@@ -28,20 +48,17 @@ h1 {
   color: var(--main-white-color);
 }
 
-.list {
-  list-style: none;
-}
-
 .link {
   text-decoration: none;
   color: inherit;
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   margin: 0 auto;
-  padding: 0 15px;
-  background-color: var(--secondary-light-font-color);
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid tomato;
 }
 
 .button {
@@ -61,12 +78,25 @@ h1 {
   cursor: pointer;
 }
 
+.button.secondary {
+  color: var(--secondary-font-color);
+}
+
 .button:hover,
-button:focus {
+.button:focus {
   background-color: var(--accent-color);
 }
 
-/* hader */
+.button.secondary:hover,
+.button.secondary:focus {
+  color: var(--main-white-color);
+}
+
+/* header */
+.header {
+  padding-top: 32px;
+}
+
 .header-link {
   font-weight: 600;
   font-size: 12px;
@@ -83,22 +113,66 @@ button:focus {
   text-transform: uppercase;
 }
 
-/* hero screen */
+/* hero */
+.hero,
+.header {
+  background-color: #505050;
+}
 
 .top-title {
   margin-top: 0;
   margin-bottom: 20px;
-
-
 }
 
-font-weight: 600;
-font-size: 11px;
-letter-spacing: 0.1em;
-text-transform: uppercase;
-color: rgba(157, 164, 189, 0.6);
+.hero-content {
+  margin: 0 0;
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--secondary-light-font-color);
+}
 
-/* .social-list {
-  display: flexbox;
-  flex-direction: column-reverse;}
+/* sections */
+.section {
+  padding-top: 130px;
+  padding-bottom: 130px;
+}
 
+/* about */
+.section-title {
+  margin: 0 0 20px;
+}
+
+.content {
+  margin: 0 0 20px;
+
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--main-font-color);
+}
+
+.content.bottom {
+  margin-bottom: 40px;
+
+  font-size: 14px;
+  line-height: 1.86;
+}
+
+/* prices */
+.prices.section-title {
+  margin-bottom: 44px;
+}
+
+.prices-list {
+  outline: 2px solid black;
+  padding: 30px 40px;
+}
+
+.prices-item {
+  margin: 0 0 20px;
+  font-size: 18px;
+  line-height: 1.67;
+  color: var(--secondary-light-font-color);
+  letter-spacing: 0.02em;
+}
